get hotels from json-server, imitateImg, show Hotel card

--- a/server/db.json5
+++ b/server/db.json5
@@ -1,13 +1,163 @@
 {
-    posts: [
-        { id: '1', title: 'a title', views: 100 },
-        { id: '2', title: 'another title', views: 200 },
+    hotels: [
+        {
+            name: 'Hotel Le Caucase',
+            stars: 3,
+            location: 'Tbilisi City Centre',
+            price: 37,
+            currency: 'EUR',
+            discount: 10,
+            refundable: true,
+            rating: {
+                score: 9.0,
+                type: 'Wonderful',
+                reviews: 49,
+            },
+            images: [
+                'https://example.com/hotel_le_caucase_1.jpg',
+                'https://example.com/hotel_le_caucase_2.jpg',
+                'https://example.com/hotel_le_caucase_3.jpg',
+            ],
+        },
+        {
+            name: 'Rooms Hotel Tbilisi',
+            stars: 4,
+            location: 'Vera',
+            price: 86,
+            currency: 'EUR',
+            discount: 30,
+            refundable: true,
+            rating: {
+                score: 9.2,
+                type: 'Wonderful',
+                reviews: 238,
+            },
+            images: [
+                'https://example.com/rooms_hotel_1.jpg',
+                'https://example.com/rooms_hotel_2.jpg',
+                'https://example.com/rooms_hotel_3.jpg',
+                'https://example.com/rooms_hotel_4.jpg',
+                'https://example.com/rooms_hotel_5.jpg',
+            ],
+        },
+        {
+            name: 'Swissôtel Tbilisi',
+            stars: 5,
+            location: 'Mtatsminda',
+            price: 151,
+            currency: 'EUR',
+            discount: 11,
+            refundable: false,
+            features: ['Pool'],
+            rating: {
+                score: 9.8,
+                type: 'Exceptional',
+                reviews: 20,
+            },
+            images: [
+                'https://example.com/swissotel_1.jpg',
+                'https://example.com/swissotel_2.jpg',
+                'https://example.com/swissotel_3.jpg',
+                'https://example.com/swissotel_4.jpg',
+            ],
+        },
+        {
+            name: 'Tbilisee Hotel',
+            stars: 4,
+            location: 'Tbilisi City Centre',
+            price: 88,
+            currency: 'EUR',
+            discount: 11,
+            refundable: true,
+            rating: {
+                score: 9.8,
+                type: 'Exceptional',
+                reviews: 86,
+            },
+            images: [
+                'https://example.com/tbilisee_hotel_1.jpg',
+                'https://example.com/tbilisee_hotel_2.jpg',
+            ],
+        },
+        {
+            name: 'Ibis Tbilisi Stadium',
+            stars: 3,
+            location: 'Chugureti',
+            price: 44,
+            currency: 'EUR',
+            discount: 0,
+            refundable: false,
+            rating: {
+                score: 9.4,
+                type: 'Exceptional',
+                reviews: 54,
+            },
+            images: [
+                'https://example.com/ibis_stadium_1.jpg',
+                'https://example.com/ibis_stadium_2.jpg',
+                'https://example.com/ibis_stadium_3.jpg',
+            ],
+        },
+        {
+            name: 'Tbilisi Edition - Design Hotel',
+            stars: 5,
+            location: 'Chugureti',
+            price: 73,
+            currency: 'EUR',
+            discount: 31,
+            refundable: true,
+            rating: {
+                score: 10.0,
+                type: 'Exceptional',
+                reviews: 1,
+            },
+            images: [
+                'https://example.com/design_hotel_1.jpg',
+                'https://example.com/design_hotel_2.jpg',
+                'https://example.com/design_hotel_3.jpg',
+                'https://example.com/design_hotel_4.jpg',
+            ],
+        },
+        {
+            name: 'Atrium Boutique Hotel',
+            stars: 4,
+            location: 'Avlabari',
+            price: 51,
+            currency: 'EUR',
+            discount: 10,
+            refundable: true,
+            features: ['Breakfast included'],
+            rating: {
+                score: 9.2,
+                type: 'Wonderful',
+                reviews: 24,
+            },
+            images: [
+                'https://example.com/atrium_boutique_1.jpg',
+                'https://example.com/atrium_boutique_2.jpg',
+                'https://example.com/atrium_boutique_3.jpg',
+            ],
+        },
+        {
+            name: 'Ramada by Wyndham Tbilisi Old City',
+            stars: 4,
+            location: 'Avlabari',
+            price: 75,
+            currency: 'EUR',
+            discount: 10,
+            refundable: false,
+            features: ['Pool', 'Hot tub'],
+            rating: {
+                score: 8.0,
+                type: 'Very good',
+                reviews: 54,
+            },
+            images: [
+                'https://example.com/ramada_1.jpg',
+                'https://example.com/ramada_2.jpg',
+                'https://example.com/ramada_3.jpg',
+                'https://example.com/ramada_4.jpg',
+            ],
+        },
     ],
-    comments: [
-        { id: '1', text: 'a comment about post 1', postId: '1' },
-        { id: '2', text: 'another comment about post 1', postId: '1' },
-    ],
-    profile: {
-        name: 'typicode',
-    },
 }
