--- a/server/hotels.json5
+++ b/server/hotels.json5
@@ -14,9 +14,9 @@
                 reviews: 49,
             },
             images: [
-                'https://example.com/hotel_le_caucase_1.jpg',
-                'https://example.com/hotel_le_caucase_2.jpg',
-                'https://example.com/hotel_le_caucase_3.jpg',
+                'hotel_le_caucase_1.jpg',
+                'hotel_le_caucase_2.jpg',
+                'hotel_le_caucase_3.jpg',
             ],
         },
         {
@@ -33,11 +33,11 @@
                 reviews: 238,
             },
             images: [
-                'https://example.com/rooms_hotel_1.jpg',
-                'https://example.com/rooms_hotel_2.jpg',
-                'https://example.com/rooms_hotel_3.jpg',
-                'https://example.com/rooms_hotel_4.jpg',
-                'https://example.com/rooms_hotel_5.jpg',
+                'rooms_hotel_1.jpg',
+                'rooms_hotel_2.jpg',
+                'rooms_hotel_3.jpg',
+                'rooms_hotel_4.jpg',
+                'rooms_hotel_5.jpg',
             ],
         },
         {
@@ -55,10 +55,10 @@
                 reviews: 20,
             },
             images: [
-                'https://example.com/swissotel_1.jpg',
-                'https://example.com/swissotel_2.jpg',
-                'https://example.com/swissotel_3.jpg',
-                'https://example.com/swissotel_4.jpg',
+                'swissotel_1.jpg',
+                'swissotel_2.jpg',
+                'swissotel_3.jpg',
+                'swissotel_4.jpg',
             ],
         },
         {
@@ -74,10 +74,7 @@
                 type: 'Exceptional',
                 reviews: 86,
             },
-            images: [
-                'https://example.com/tbilisee_hotel_1.jpg',
-                'https://example.com/tbilisee_hotel_2.jpg',
-            ],
+            images: ['tbilisee_hotel_1.jpg', 'tbilisee_hotel_2.jpg'],
         },
         {
             name: 'Ibis Tbilisi Stadium',
@@ -93,9 +90,9 @@
                 reviews: 54,
             },
             images: [
-                'https://example.com/ibis_stadium_1.jpg',
-                'https://example.com/ibis_stadium_2.jpg',
-                'https://example.com/ibis_stadium_3.jpg',
+                'ibis_stadium_1.jpg',
+                'ibis_stadium_2.jpg',
+                'ibis_stadium_3.jpg',
             ],
         },
         {
@@ -112,10 +109,10 @@
                 reviews: 1,
             },
             images: [
-                'https://example.com/design_hotel_1.jpg',
-                'https://example.com/design_hotel_2.jpg',
-                'https://example.com/design_hotel_3.jpg',
-                'https://example.com/design_hotel_4.jpg',
+                'design_hotel_1.jpg',
+                'design_hotel_2.jpg',
+                'design_hotel_3.jpg',
+                'design_hotel_4.jpg',
             ],
         },
         {
@@ -133,9 +130,9 @@
                 reviews: 24,
             },
             images: [
-                'https://example.com/atrium_boutique_1.jpg',
-                'https://example.com/atrium_boutique_2.jpg',
-                'https://example.com/atrium_boutique_3.jpg',
+                'atrium_boutique_1.jpg',
+                'atrium_boutique_2.jpg',
+                'atrium_boutique_3.jpg',
             ],
         },
         {
@@ -153,10 +150,10 @@
                 reviews: 54,
             },
             images: [
-                'https://example.com/ramada_1.jpg',
-                'https://example.com/ramada_2.jpg',
-                'https://example.com/ramada_3.jpg',
-                'https://example.com/ramada_4.jpg',
+                'ramada_1.jpg',
+                'ramada_2.jpg',
+                'ramada_3.jpg',
+                'ramada_4.jpg',
             ],
         },
     ],
