add Debug Value

--- a/server/hotels.json5
+++ b/server/hotels.json5
@@ -14,10 +14,11 @@
                 reviews: 49,
             },
             images: [
-                'hotel_le_caucase_1.jpg',
-                'hotel_le_caucase_2.jpg',
-                'hotel_le_caucase_3.jpg',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
             ],
+            paymentType: ['Reserve now, pay later'],
         },
         {
             name: 'Rooms Hotel Tbilisi',
@@ -33,15 +34,16 @@
                 reviews: 238,
             },
             images: [
-                'rooms_hotel_1.jpg',
-                'rooms_hotel_2.jpg',
-                'rooms_hotel_3.jpg',
-                'rooms_hotel_4.jpg',
-                'rooms_hotel_5.jpg',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
             ],
+            paymentType: [],
         },
         {
-            name: 'Swissôtel Tbilisi',
+            name: 'Swiss\u00f4tel Tbilisi',
             stars: 5,
             location: 'Mtatsminda',
             price: 151,
@@ -55,11 +57,12 @@
                 reviews: 20,
             },
             images: [
-                'swissotel_1.jpg',
-                'swissotel_2.jpg',
-                'swissotel_3.jpg',
-                'swissotel_4.jpg',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
             ],
+            paymentType: ['Reserve without a credit card'],
         },
         {
             name: 'Tbilisee Hotel',
@@ -74,7 +77,11 @@
                 type: 'Exceptional',
                 reviews: 86,
             },
-            images: ['tbilisee_hotel_1.jpg', 'tbilisee_hotel_2.jpg'],
+            images: [
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+            ],
+            paymentType: [],
         },
         {
             name: 'Ibis Tbilisi Stadium',
@@ -90,10 +97,11 @@
                 reviews: 54,
             },
             images: [
-                'ibis_stadium_1.jpg',
-                'ibis_stadium_2.jpg',
-                'ibis_stadium_3.jpg',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
             ],
+            paymentType: ['Reserve now, pay later'],
         },
         {
             name: 'Tbilisi Edition - Design Hotel',
@@ -109,11 +117,12 @@
                 reviews: 1,
             },
             images: [
-                'design_hotel_1.jpg',
-                'design_hotel_2.jpg',
-                'design_hotel_3.jpg',
-                'design_hotel_4.jpg',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
             ],
+            paymentType: [],
         },
         {
             name: 'Atrium Boutique Hotel',
@@ -130,10 +139,11 @@
                 reviews: 24,
             },
             images: [
-                'atrium_boutique_1.jpg',
-                'atrium_boutique_2.jpg',
-                'atrium_boutique_3.jpg',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
             ],
+            paymentType: ['Reserve without a credit card'],
         },
         {
             name: 'Ramada by Wyndham Tbilisi Old City',
@@ -150,11 +160,12 @@
                 reviews: 54,
             },
             images: [
-                'ramada_1.jpg',
-                'ramada_2.jpg',
-                'ramada_3.jpg',
-                'ramada_4.jpg',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
+                'Will be simulated from static images randomly',
             ],
+            paymentType: [],
         },
     ],
 }
